fixed video covering buttons

--- a/client/src/components/LogoAnimation.css
+++ b/client/src/components/LogoAnimation.css
@@ -18,7 +18,8 @@
      99%{
        opacity:0;
        display:block;
+       margin-top: 0
      }
-   100%{opacity:0;display:none;}
+   100%{opacity:0;display:none; margin-top: 1000px}
    }
   
