--- a/client/src/components/Splashtext.css
+++ b/client/src/components/Splashtext.css
@@ -4,16 +4,15 @@
 
 }
 .welcome {
-  text-shadow: #6374AB 30px -8px 2px;
+  text-shadow: rgb(46, 28, 111) 10px 8px 2px;
   /* margin: 40px auto; */
-  /* font-family: 'Ubuntu', sans-serif; */
-  font-size: 100px;
+  font-size: 90px;
   font-weight: bold;
   margin-bottom:0;
   padding-bottom:0;
   
- color: transparent;
-   /* text-align: center;
-  letter-spacing: 5px;
+ color:#A067E2;
+ text-align: center;
+   /* letter-spacing: 5px;
   text-shadow: 0 0 8px #316472; */
 } 
